Spring boot 3.5.7, other dependency updates